----------------------------------------------------------------------
Wed Feb 29 11:20:30 2012                        Michael Jennings (mej)

Fair warning:  There (may) be dragons.

Fundamentally revamping the external interface to NetDev object access
via Node objects.  The goal here was to make naming, invocation, and
internal handling more consistent.  This is still pending review and
subject to change.  There are also some subtle bugfixes and cleanups
of documentation as well as some consolidation of functionality.
----------------------------------------------------------------------
Wed Feb 29 12:40:55 2012                        Michael Jennings (mej)

Update "node" CLI to match API changes.

Minor optimizations, cleanups, and typo fixes.

Added "--dump" option to "object" CLI for deep-dive object diagnosis.
Not for the faint of heart.  ;-)
----------------------------------------------------------------------
Thu Mar  1 18:40:22 2012                        Michael Jennings (mej)

Bump version to 3.2.

Update some documentation.  Fix some typos.  Minor optimizations.

Add Warewulf::Term::yesno() to encapsulate some commonly-used
functionality.

RFE from Greg:  When debugging, add caller information to warning and
error messages too.
----------------------------------------------------------------------
Fri Mar  9 15:40:26 2012                        Michael Jennings (mej)

Work in progress:  Cleaning up and optimizing MySQL.pm.
----------------------------------------------------------------------
Mon Mar 12 10:47:48 2012                        Michael Jennings (mej)

Fix database.conf permissions.  Try a better technique for getting the
SVN revision.
----------------------------------------------------------------------
Tue Mar 13 14:35:50 2012                        Michael Jennings (mej)

Perform bitmask in property method rather than relying on callers.
----------------------------------------------------------------------