@@ -410,3 +410,7 @@ Tue Mar 13 14:35:50 2012                        Michael Jennings (mej)
 
 Perform bitmask in property method rather than relying on callers.
 ----------------------------------------------------------------------
+Tue Mar 13 15:49:01 2012                        Michael Jennings (mej)
+
+Completed optimization work for MySQL.pm.
+----------------------------------------------------------------------
